[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/kenney_scribbledungeons/PNG/Default (64px)/Characters/green_character.png" type="Texture" id=1]
[ext_resource path="res://characters/Character.gd" type="Script" id=2]
[ext_resource path="res://characters/Hand.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/health_bar.svg" type="Texture" id=4]
[ext_resource path="res://characters/HealthBar.gd" type="Script" id=5]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true)
	{
		new_color = white_color
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=1]
radius = 20.025

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.6
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hands" type="Node2D" parent="."]

[node name="LeftHand" parent="Hands" instance=ExtResource( 3 )]
scale = Vector2( -1, 1 )
is_left = true

[node name="RightHand" parent="Hands" instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/hurt = SubResource( 4 )

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 8
script = ExtResource( 5 )

[node name="HealthTween" type="Tween" parent="HealthBar"]

[node name="HideTween" type="Tween" parent="HealthBar"]

[node name="HideDelayTimer" type="Timer" parent="HealthBar"]
wait_time = 0.5
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.65
one_shot = true

[connection signal="hp_changed" from="." to="HealthBar" method="_on_Character_hp_changed"]
[connection signal="tween_all_completed" from="HealthBar/HealthTween" to="HealthBar" method="_on_HealthTween_tween_all_completed"]
[connection signal="timeout" from="HealthBar/HideDelayTimer" to="HealthBar" method="_on_HideDelayTimer_timeout"]
